# mspal

./: .gitignore  CMakeLists.txt  README.md  bstr.cpp  comdef.h  comutil.h  hello-world.cpp  hello-world.h  icu.example.cpp  icu_example.cpp  install_odbc.sh  mingw.h  nomalization_example.cpp  odbc_connector.cpp  odbc_connector.h  test.cpp  use_odbc.cpp  wintypes.h  wpal_sample.cpp  wpal_sample2.cpp  wpal_test.cpp
MSPal/: CMakeLists.txt  README.md  configurepaths.cmake  configureplatform.cmake
MSPal/coreclr/: CMakeLists.txt
MSPal/coreclr/pal/: CMakeLists.txt
MSPal/coreclr/pal/src/: CMakeLists.txt  configure.cmake
MSPal/coreclr/pal/tests/palsuite/exception_handling/pal_sxs/test1/: CMakeLists.txt
MSPal/coreclr/palrt/: CMakeLists.txt
MSPal/native/corehost/: CMakeLists.txt  build.cmd
MSPal/native/libs/: CMakeLists.txt  build-native.cmd  configure.cmake
coreclr/: CMakeLists.txt  configurecompiler.cmake  configurepaths.cmake  configuretarget.cmake
coreclr/inc/: configuration.h  corhdr.h  crtwrap.h  eventtracebase.h  outstring.h  shash.h  sstring.inl  utilcode.h
coreclr/mingw/: comdef.cpp  comdef.h  comutil.cpp  comutil.h  winerror.h  wpal.h
coreclr/minipal/: dn-u16.h
coreclr/minipal/Unix/: dn-u16.cpp
coreclr/minipal/Windows/: dn-u16.cpp
coreclr/pal/: CMakeLists.txt
coreclr/pal/inc/: mbusafecrt.h  pal.h  pal_def.h  pal_mstypes.h
coreclr/pal/inc/rt/: palrt.h
coreclr/pal/prebuilt/corerror/: makecorerror.bat
coreclr/pal/src/: CMakeLists.txt
coreclr/pal/src/cruntime/: file.cpp  wchar.cpp
coreclr/pal/src/debug/: debug.cpp
coreclr/pal/src/file/: directory.cpp  file.cpp  find.cpp  path.cpp
coreclr/pal/src/include/pal/: cruntime.h  dbgmsg.h  printfcpp.hpp
coreclr/pal/src/loader/: module.cpp
coreclr/pal/src/locale/: unicode.cpp
coreclr/pal/src/map/: map.cpp
coreclr/pal/src/misc/: dbgmsg.cpp  environ.cpp
coreclr/pal/src/safecrt/: input.inl  mbusafecrt.cpp  mbusafecrt_internal.h  safecrt_winput_s.cpp  sscanf_s.cpp  wcscat_s.cpp  wcscpy_s.cpp  wcslen_s.cpp  wcslwr_s.cpp  wcsncat_s.cpp  wcsncpy_s.cpp  wcstok_s.cpp  wmakepath_s.cpp
coreclr/pal/src/synchobj/: event.cpp  mutex.cpp  semaphore.cpp
coreclr/pal/src/thread/: process.cpp
coreclr/palrt/: CMakeLists.txt  dn-u16.h  memorystream.cpp  variant.cpp  winapi.cpp
coreclr/palrt/Unix/: dn-u16.cpp
lib/: CMakeLists.txt  potato.cpp  potato.h
mingw/: Shlwapi.h  Windows.h  com_error.h  comutil.cpp  comutil.h  concurrent_queue.h  concurrent_vector.h  ini_parser.cpp  ini_parser.h  linuxutil.cpp  linuxutil.h  variant_t.h  wpal.h
